--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -11,6 +11,7 @@ disabled_rules:
   - closure_end_indentation
   - trailing_comma
   - todo
+  - opening_brace
   
 opt_in_rules:
   - force_unwrapping
